@@ -89,13 +89,23 @@
 </tr>
 <tr valign="top">
   <td>
-    <label class="form-label" for="manager_name">Name</label>
+    <label class="form-label" for="manager_firstname">First Name</label>
   </td>
   <td>
-    <input type="text" size="50" name="manager_name" id="manager_name"
+    <input type="text" size="50" name="manager_firstname" id="manager_firstname"
+           value="Manager" />
+  </td>
+</tr>
+<tr valign="top">
+  <td>
+    <label class="form-label" for="manager_lastname">Last Name</label>
+  </td>
+  <td>
+    <input type="text" size="50" name="manager_lastname" id="manager_lastname"
            value="CPS Manager" />
   </td>
 </tr>
+
 <tr valign="top" tal:condition="extension_profiles">
   <td>
     <label class="form-label">Optional Extensions</label>
