@@ -64,3 +64,4 @@ New internal features:
   test.
 - Change the default profile to use a CPS User Folder and CPS ZODB Directories
 - Add default roles in the VariousImporter class
+- Create the default manager from the CPS site add form
